--- a/src/package.json
+++ b/src/package.json
@@ -2,7 +2,7 @@
   "name": "grandis",
   "version": "0.0.1",
   "description": "An app to track the appearance of Phelsuma Grandis around the Islands.",
-  "productName": "Spot the Grandis",
+  "productName": "Spot a Grandis",
   "cordovaId": "org.cordova.grandis.app",
   "author": "Omri Har-Shemesh <omrihar@gmail.com>",
   "private": true,
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
+    "aws-sdk": "^2.493.0",
     "axios": "^0.18.1",
     "quasar": "^1.0.0",
     "vue-i18n": "^8.0.0"
