--- a/src/package.json
+++ b/src/package.json
@@ -14,8 +14,10 @@
     "@quasar/extras": "^1.0.0",
     "aws-sdk": "^2.493.0",
     "axios": "^0.18.1",
+    "leaflet": "^1.5.1",
     "quasar": "^1.0.0",
-    "vue-i18n": "^8.0.0"
+    "vue-i18n": "^8.0.0",
+    "vue2-leaflet": "^2.1.1"
   },
   "devDependencies": {
     "@quasar/app": "^1.0.0",
