--- a/src/package.json
+++ b/src/package.json
@@ -17,7 +17,8 @@
     "leaflet": "^1.5.1",
     "quasar": "^1.0.0",
     "vue-i18n": "^8.0.0",
-    "vue2-leaflet": "^2.1.1"
+    "vue2-leaflet": "^2.1.1",
+    "vue2-leaflet-locatecontrol": "^1.0.1"
   },
   "devDependencies": {
     "@quasar/app": "^1.0.0",
