copy actions from .gitlab.ci

--- a/.github/workflows/quasar.yml
+++ b/.github/workflows/quasar.yml
@@ -16,6 +16,8 @@ jobs:
       - name: install quasar and build
         run: |
           yarn global add @quasar/cli
+          yarn
+          touch .env
           quasar build
         env:
           CI: true
